// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`models/weather.model.ts Generates a valid Weather model 1`] = `
WeatherModel {
  "humidity": 68,
  "precipitation": 10,
  "temperature": Object {
    "current": 19,
    "maximum": 20,
    "minimum": 18,
  },
  "timestamp": 1566142435,
  "weatherType": Object {
    "description": "shower rain",
    "id": 521,
    "type": "Rain",
  },
  "windSpeed": 7,
}
`;

exports[`models/weather.model.ts Generates a valid Weather model on malformed data 1`] = `
WeatherModel {
  "humidity": 0,
  "precipitation": 0,
  "temperature": Object {
    "current": 0,
    "maximum": 0,
    "minimum": 0,
  },
  "timestamp": 1566227684248,
  "weatherType": Object {
    "description": "clear sky",
    "id": 800,
    "type": "Clear",
  },
  "windSpeed": 0,
}
`;

exports[`models/weather.model.ts Generates a valid Weather model with main data missing 1`] = `
WeatherModel {
  "humidity": 0,
  "precipitation": 0,
  "temperature": Object {
    "current": 0,
    "maximum": 0,
    "minimum": 0,
  },
  "timestamp": 1566227684248,
  "weatherType": Object {
    "description": "clear sky",
    "id": 800,
    "type": "Clear",
  },
  "windSpeed": 0,
}
`;

exports[`models/weather.model.ts Generates a valid Weather model with poor data 1`] = `
WeatherModel {
  "humidity": 0,
  "precipitation": 0,
  "temperature": Object {
    "current": 0,
    "maximum": 0,
    "minimum": 0,
  },
  "timestamp": 1566227684244,
  "weatherType": Object {
    "description": "clear sky",
    "id": 800,
    "type": "Clear",
  },
  "windSpeed": 0,
}
`;
